<resources>
    <string name="app_name">MentalBrainApplicaiton</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="memorytraining">Memory</string>
    <string name="settings">Settings</string>
    <string name="mentalmaths">Mental Maths</string>
    <string name="mathsquiz">Quiz</string>
    <string name="mathstest">Quick Test</string>
    <string name="leader_boards">Leader Boards</string>
    <string name="problemsolving">Problem-Solving</string>
    <string name="back">Back</string>
    <string name="register_string">Sign up now!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="mail">Email address</string>
    <string name="username">Username</string>
    <string name="register_button">Register</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="login_string">Already a member?</string>
    <string name="login_button">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="user_progress">User Progress</string>
    <string name="button_home">Home</string>
    <string name="takes_you_to_the_homescreen">Takes you to the homescreen</string>
    <string name="takes_you_to_your_profile">Takes you to your profile</string>
    <string name="email">email</string>
    <string name="logout">Logout</string>
    <string name="TextView_question_number">Question number:</string>
    <string name="na">n/a</string>
    <string name="baseline_quiz">Not sure where to start? Take our baseline quiz to find out your recommended starting difficulty!</string>
    <string name="improve_skill_quizes">Already feeling confident in your abilities? Click here to improve your Math skills at one of three chosen difficulties!</string>



</resources>
